# 3-ejercicio-de-dise-o-y-codificaci-n-ctrl-c-ctrl-v

./: Backup.txt  CMakeLists.txt  Diagrama.md  main.cpp
src/: Customer.cpp  Customer.h  Product.cpp  Product.h  Purchase.cpp  Purchase.h  Store.cpp  Store.h
